<resources>
    <string name="app_name">Tasks App</string>
    <string name="task_description">Description</string>
    <string name="task_title">Title</string>
    <string name="delete_task">Delete Task</string>
    <string name="add_task">Add Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="move_task">Move Task</string>
    <string name="edit_task_save">Edit Task - Save</string>
    <string name="edit_task_cancel">Edit Task - Cancel</string>
    <string name="notification_tasks_updated">Tasks updated</string>
    <string name="share_tasks">Share</string>
    <string name="error_in_server">There was an error when connecting to the server - Action not completed</string>
</resources>
